--- a/feedback.html
+++ b/feedback.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="home.css">
 
   <style>
+    /* Page-local overrides to keep feedback page isolated from hero layout */
     .hero,
     .hero-video,
     .hero-img,
@@ -28,10 +29,14 @@
       margin-bottom: 1.5rem;
     }
 
+    /* Placeholder sizing: responsive width with dynamic minimums based on viewport */
     .placeholder-box {
       height: 36vh;
+      /* scale height with viewport */
       min-height: 260px;
+      /* absolute minimum for small screens */
       max-height: 560px;
+      /* avoid going too tall on large screens */
       border-radius: 12px;
       background: #0b61a7;
       color: #fff;
@@ -39,8 +44,11 @@
       align-items: center;
       justify-content: center;
       width: 90%;
+      /* default relative width */
       max-width: 920px;
+      /* maximum width */
       min-width: 40vw;
+      /* dynamic minimum relative to viewport width */
       margin: 0 auto;
     }
 
@@ -48,6 +56,7 @@
       color: #6c757d;
     }
 
+    /* Ensure columns stretch so cards match height */
     .row.g-4>.col-12.d-flex {
       display: flex;
       align-items: stretch;
@@ -63,14 +72,25 @@
       flex: 1 1 auto;
     }
 
+    /* Slight media-tuning */
     @media (max-width: 575px) {
+
+      /* On small screens make both placeholders equal-width and equal-height */
       .placeholder-box {
         width: 100%;
+        min-width: auto;
+        height: 40vh;
         min-height: 220px;
+        max-width: none;
       }
 
+      /* Ensure the cards stretch and placeholders keep consistent sizing */
       .row.g-4>.col-12.d-flex {
         align-items: stretch;
+      }
+
+      .custom-card {
+        flex: 1 1 auto;
       }
     }
 
@@ -80,9 +100,14 @@
       }
     }
 
+    /* Make feedback cards match site theme and equal height */
     .custom-card {
       border-radius: 16px;
       box-shadow: 0 14px 30px rgba(0, 0, 0, .06);
+    }
+
+    .row.g-4>.col-12.d-flex {
+      display: flex;
     }
 
     .custom-card .card-body,
@@ -108,7 +133,6 @@
 
       <div class="collapse navbar-collapse" id="mainNav">
         <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
-          <li class="nav-item"><a class="nav-link active" href="openContact.html">Admin Panel </a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
           <li id="nav-feedback" class="nav-item d-none"><a class="nav-link" href="feedback.html">Live Feed</a></li>
@@ -122,25 +146,21 @@
     <h1 class="mb-4">Live Feedback</h1>
 
     <div class="row g-4 justify-content-center justify-content-md-end">
-
-      <!-- CAMERA FEED -->
       <div class="col-12 col-md-6 d-flex">
         <div class="card p-4 text-center h-100 custom-card">
           <h5>Camera Feed</h5>
-
           <div class="placeholder-box my-3">
             <div style="text-align:center">
               <div style="font-size:48px">📷</div>
-
               <div class="placeholder-box my-3" style="padding:0;">
-                <img id="cameraFeed" src=""
-                  style="width:100%; height:100%; object-fit:cover; border-radius:12px;">
+                <!-- cameraFeed src will be set from Firebase /video_server/ip -->
+                <img id="cameraFeed"
+                     src=""
+                     style="width:100%; height:100%; object-fit:cover; border-radius:12px;">
               </div>
-
-              <div id="noCameraData" style="font-weight:600;margin-top:.5rem">No camera data</div>
+              <div id="cameraStatus" style="font-weight:600;margin-top:.5rem">No camera data</div>
             </div>
           </div>
-
           <div class="d-flex gap-2 justify-content-center">
             <button class="btn btn-secondary btn-sm" disabled>Start Camera</button>
             <button class="btn btn-outline-secondary btn-sm" disabled>Stop Camera</button>
@@ -148,7 +168,6 @@
         </div>
       </div>
 
-      <!-- PROXIMITY SENSOR -->
       <div class="col-12 col-md-6 d-flex">
         <div class="card p-4 text-center h-100 custom-card">
           <h5>Proximity Sensor</h5>
@@ -167,17 +186,22 @@
           </div>
         </div>
       </div>
-
     </div>
   </main>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- FIREBASE + CAMERA STREAM LOGIC -->
   <script type="module">
     import { initializeApp, getApps } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-    import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-database.js";
+    import {
+      getAuth,
+      onAuthStateChanged,
+      signOut
+    } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+    import {
+      getDatabase,
+      ref,
+      onValue
+    } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-database.js";
 
     const fbAuthConfig = {
       apiKey: "AIzaSyAZpdtDkHAmCz9GosbJ-PkO4KM2iaNTfHQ",
@@ -188,10 +212,11 @@
       appId: "1:369725415465:web:8beecb3baf985ddddb7c38"
     };
 
+    // init Firebase once
     if (!getApps().length) initializeApp(fbAuthConfig);
 
+    // --- Authentication setup ---
     const fbAuth = getAuth();
-    const db = getDatabase();
 
     const navFeedback = document.getElementById('nav-feedback');
     const navAuth = document.getElementById('nav-auth');
@@ -209,47 +234,123 @@
         }
       } else {
         navFeedback?.classList.add('d-none');
-        navAuth.innerHTML = `<a class="nav-link" href="login.html">Login</a>`;
+        if (navAuth) navAuth.innerHTML = `<a class="nav-link" href="login.html">Login</a>`;
       }
     });
 
+    // Defensive DOM cleanup
     document.addEventListener('DOMContentLoaded', () => {
       document.querySelectorAll('.hero, .hero-video, .hero-img').forEach(el => el.remove());
     });
 
-    // --- SENSOR READING ---
+    // --- Realtime DB ---
+    const db = getDatabase();
+
+    // --- Camera feed from Python video server ---
+    const cameraImg = document.getElementById("cameraFeed");
+    const cameraStatus = document.getElementById("cameraStatus");
+
+    // Python writes its IP as plain string to /video_server/ip
+    const videoServerIpRef = ref(db, "video_server/ip");
+
+    onValue(videoServerIpRef, (snapshot) => {
+      const pcIp = snapshot.val();
+      console.log("Video server IP from Firebase:", pcIp);
+
+      if (!pcIp) {
+        if (cameraStatus) {
+          cameraStatus.textContent = "No camera server IP";
+        }
+        cameraImg.removeAttribute("src");
+        return;
+      }
+
+      const url = `http://${pcIp}:5000/video`;
+      cameraImg.src = url;
+      if (cameraStatus) {
+        cameraStatus.textContent = `Streaming from ${url}`;
+      }
+    }, (error) => {
+      console.error("Error reading video server IP:", error);
+      if (cameraStatus) {
+        cameraStatus.textContent = "Error loading camera";
+      }
+    });
+
+    // --- Real-time proximity sensor logic ---
     const distanceEl = document.getElementById("distanceValue");
     const distanceRef = ref(db, "sensor/distance");
 
     onValue(distanceRef, (snapshot) => {
       const dist = snapshot.val();
-      if (dist == null) {
+
+      // Update numeric display
+      if (dist === null || dist === undefined) {
         distanceEl.textContent = "No sensor data";
         distanceEl.style.color = "#ffffff";
       } else {
         distanceEl.textContent = dist + " cm";
+        if (typeof dist === 'number') {
+          if (dist < 20) distanceEl.style.color = "#ff4d4d";
+          else if (dist < 50) distanceEl.style.color = "#ffcc00";
+          else distanceEl.style.color = "#00ff99";
+        } else {
+          distanceEl.style.color = "#ffffff";
+        }
+      }
+
+      // Update proximity placeholder visuals (text + background)
+      const proxText = document.getElementById('proxPlaceholderText');
+      if (proxText) {
+        const box = proxText.closest('.placeholder-box');
+        if (dist === null || dist === undefined) {
+          proxText.innerHTML = '<div style="font-weight:600">No sensor data</div>';
+          if (box) box.style.background = '#0b61a7';
+        } else {
+          proxText.innerHTML = `
+              <div style="font-size:20px; font-weight:700;">Distance: ${dist} cm</div>
+              <div style="font-size:14px; opacity:0.9; margin-top:.25rem;">
+                ${dist < 20 ? 'Too close' : (dist < 50 ? 'Near' : 'Clear')}
+              </div>`;
+          if (box) {
+            if (typeof dist === 'number') {
+              if (dist < 20) box.style.background = '#ff4d4d';
+              else if (dist < 50) box.style.background = '#ffcc00';
+              else box.style.background = '#0b61a7';
+            } else {
+              box.style.background = '#0b61a7';
+            }
+          }
+        }
       }
     });
 
-    // ---------------------------------------------------------
-    // GET CAMERA IP FROM FIREBASE + UPDATE STREAM
-    // ---------------------------------------------------------
-    const ipRef = ref(db, "ips/ip");
+    // --- Simulator hooks (leave as-is if you use them elsewhere) ---
+    let simInterval = null;
+    const startBtn = document.getElementById('startSensor');
+    const stopBtn = document.getElementById('stopSensor');
 
-    onValue(ipRef, (snapshot) => {
-      const data = snapshot.val();
-      if (!data || !data.ip) return;
+    // Enable the controls on page load (if you implement fakeSensorOnce)
+    if (startBtn && stopBtn) {
+      startBtn.disabled = false;
+      stopBtn.disabled = true;
 
-      const cameraIP = data.ip;
-      console.log("✔ Camera IP loaded from Firebase:", cameraIP);
+      startBtn.addEventListener('click', () => {
+        if (simInterval) return;
+        // fakeSensorOnce(); // only if you have this defined elsewhere
+        // simInterval = setInterval(fakeSensorOnce, 1500);
+        startBtn.disabled = true;
+        stopBtn.disabled = false;
+      });
 
-      const camImg = document.getElementById("cameraFeed");
-      camImg.src = `http://${cameraIP}:81/stream`;
-
-      // הסתרת "No camera data" כשיש פיד
-      const noCameraText = document.getElementById("noCameraData");
-      if (noCameraText) noCameraText.style.display = "none";
-    });
+      stopBtn.addEventListener('click', () => {
+        if (!simInterval) return;
+        clearInterval(simInterval);
+        simInterval = null;
+        startBtn.disabled = false;
+        stopBtn.disabled = true;
+      });
+    }
   </script>
 
 </body>
