--- a/about.html
+++ b/about.html
@@ -1,70 +1,59 @@
-<!doctype html> <!-- מציין שזהו דף HTML5 -->
-<html lang="en"> <!-- מגדיר את שפת הדף לאנגלית -->
+<!doctype html>
+<html lang="en">
 <head>
-  <meta charset="utf-8"> <!-- מאפשר שימוש בתווים בינלאומיים -->
-  <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- מתאים את הדף למסכים קטנים (רספונסיבי) -->
-  <title>Smart Cart | About</title> <!-- כותרת הלשונית של הדפדפן -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Smart Cart | About</title>
 
-  <!-- קישור לספריית Bootstrap לעיצוב אחיד ומהיר -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- קובץ העיצוב האישי של העמוד -->
-  <link rel="stylesheet" href="about.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="about.css" />
 </head>
 <body>
 
-  <!-- סרגל ניווט עליון אחיד לכל הדפים -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top"> <!-- fixed-top = נשאר למעלה גם בגלילה -->
-    <div class="container"> <!-- ממרכז את התוכן לרוחב הדף -->
-      <a class="navbar-brand d-flex align-items-center" href="home.html"> <!-- קישור לעמוד הבית -->
-        <img src="logo_placeholder_loginpage copy.jpeg" class="navbarimg me-2" alt="Logo"> <!-- לוגו האתר -->
-        <span class="brand-text">Smart Cart</span> <!-- טקסט שם האתר -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
+    <div class="container">
+      <a class="navbar-brand d-flex align-items-center" href="home.html">
+        <img src="logo_placeholder_loginpage copy.jpeg" class="navbarimg me-2" alt="Logo" />
+        <span class="brand-text">Smart Cart</span>
       </a>
 
-      <!-- כפתור פתיחה של התפריט במסכים קטנים -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
               aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span> <!-- אייקון של שלושה פסים -->
+        <span class="navbar-toggler-icon"></span>
       </button>
 
-      <!-- התפריט הנפתח עצמו -->
       <div class="collapse navbar-collapse" id="mainNav">
-        <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3"> <!-- ms-auto = מיישר את התפריט לצד ימין -->
-          <li class="nav-item"><a class="nav-link active" href="openContact.html">Admin Panel </a></li>
-          <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li> <!-- עמוד נוכחי -->
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li> <!-- קישור לעמוד צור קשר -->
+        <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
+          <li class="nav-item"><a class="nav-link active" href="openContact.html">Admin Panel</a></li>
+          <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
           <li id="nav-feedback" class="nav-item d-none"><a class="nav-link" href="feedback.html">Live Feed</a></li>
-          <li id="nav-auth" class="nav-item"><a class="nav-link" href="login.html">Login</a></li> <!-- קישור/שינוי כניסה/יציאה -->
+          <li id="nav-auth" class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- אזור הכותרת הראשית (Hero Section) -->
-  <header class="container hero text-center py-5"> <!-- text-center = מרכז את התוכן -->
-    <div class="row justify-content-center align-items-center"> <!-- ממרכז אנכית ואופקית -->
-      
-      <!-- צד שמאל: טקסט -->
-      <div class="col-12 col-md-6 mb-4 mb-md-0"> <!-- בעיצוב מובייל תופס את כל השורה -->
-        <h1 class="fw-bold mb-3">About Smart Cart</h1> <!-- כותרת עיקרית -->
+  <header class="container hero text-center py-5">
+    <div class="row justify-content-center align-items-center">
+      <div class="col-12 col-md-6 mb-4 mb-md-0">
+        <h1 class="fw-bold mb-3">About Smart Cart</h1>
         <p class="lead text-muted">
           Revolutionizing everyday shopping through innovation, autonomy, and accessibility.
-        </p> <!-- משפט תיאור קצר -->
+        </p>
       </div>
 
-      <!-- צד ימין: תמונה -->
       <div class="col-12 col-md-6">
-        <img src="shoping_cart_consept.png" class="about-hero-img" alt="Smart Cart Concept"> <!-- תמונת העגלה החכמה -->
+        <img src="shoping_cart_consept.png" class="about-hero-img" alt="Smart Cart Concept" />
       </div>
     </div>
   </header>
 
-  <!-- אזור התוכן הראשי של הדף -->
-  <main class="container py-5"> <!-- py-5 = ריווח עליון ותחתון -->
-    <div class="card shadow-sm p-4 p-md-5 about-card mx-auto"> <!-- כרטיס עם צל, ריווח פנימי ומרכז -->
-      <h2 class="fw-bold mb-3 text-center">Our Story</h2> <!-- כותרת משנה -->
+  <main class="container py-5">
+    <div class="card shadow-sm p-4 p-md-5 about-card mx-auto">
+      <h2 class="fw-bold mb-3 text-center">Our Story</h2>
 
-      <!-- פסקאות טקסט המתארות את הפרויקט -->
       <p>
         Smart Cart was born from a real need to make shopping easier and more accessible for everyone.
         Traditional shopping carts are heavy, awkward, and often broken — a challenge for seniors, parents,
@@ -90,48 +79,11 @@
     </div>
   </main>
 
-  <!-- תחתית הדף -->
   <footer class="container py-4 text-center">
-    <small class="text-muted">© 2025 Smart Cart — All rights reserved</small> <!-- זכויות יוצרים -->
+    <small class="text-muted">© 2025 Smart Cart — All rights reserved</small>
   </footer>
 
-  <!-- קובץ JavaScript של Bootstrap להפעלת תפריט הניווט -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script type="module">
-    import { initializeApp, getApps } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-
-    const fbAuthConfig = {
-      apiKey: "AIzaSyAZpdtDkHAmCz9GosbJ-PkO4KM2iaNTfHQ",
-      authDomain: "freecart11.firebaseapp.com",
-      projectId: "freecart11",
-      messagingSenderId: "369725415465",
-      appId: "1:369725415465:web:8beecb3baf985ddddb7c38"
-    };
-
-    if (!getApps().length) initializeApp(fbAuthConfig);
-    const fbAuth = getAuth();
-
-    const navFeedback = document.getElementById('nav-feedback');
-    const navAuth = document.getElementById('nav-auth');
-
-    onAuthStateChanged(fbAuth, (user) => {
-      if (user) {
-        navFeedback?.classList.remove('d-none');
-        if (navAuth) {
-          navAuth.innerHTML = `<a class="nav-link" href="#" id="nav-logout">Logout (${user.email || user.uid})</a>`;
-          document.getElementById('nav-logout')?.addEventListener('click', async (e) => {
-            e.preventDefault();
-            await signOut(fbAuth);
-            window.location.href = 'home.html';
-          });
-        }
-      } else {
-        navFeedback?.classList.add('d-none');
-        if (navAuth) navAuth.innerHTML = `<a class="nav-link" href="login.html">Login</a>`;
-      }
-    });
-  </script>
+  <script type="module" src="about.js"></script>
 </body>
 </html>
-
