--- a/contact.html
+++ b/contact.html
@@ -1,202 +1,111 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Smart Cart | Contact</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<style>
-  /* === Base === */
-  html, body { height: 100%; margin:0; padding:0; font-family:"Segoe UI", Arial, sans-serif; padding-top:84px; background:#eef2f7;}
-  .navbarimg { height:48px; width:auto; border-radius:50%; object-fit:cover; }
-  .navbar .brand-text { font-weight:700; }
-  .navbar .nav-link { color:#0d6efd !important; font-weight:500; }
-  .navbar .nav-link:hover { color:#0b5ed7 !important; }
-  .navbar .nav-link.active { color:#0a58ca !important; }
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Smart Cart | Contact</title>
 
-  /* === Contact card === */
-  .contact-card { border-radius:16px; background:#fff; box-shadow:0 14px 30px rgba(0,0,0,.06); transition: transform .35s ease, opacity .5s ease; opacity:0; transform:translateY(14px); }
-  .contact-card.show { opacity:1; transform:translateY(0); }
-
-  /* === Buttons === */
-  .btn-pill { border-radius:9999px; padding:.6rem 1.2rem; }
-  .btn-success { background-color:#198754 !important; border-color:#198754 !important; }
-
-  footer { text-align:center; color:#6c757d; font-size:.9rem; margin-top:2rem; }
-
-  @media(max-width:576px){ .navbarimg{height:44px;} body{padding-left:12px; padding-right:12px;} }
-</style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="contact.css" />
 </head>
 <body>
 
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
-  <div class="container">
-    <a class="navbar-brand d-flex align-items-center" href="home.html">
-      <img src="logo_placeholder_loginpage copy.jpeg" class="navbarimg me-2" alt="Logo">
-      <span class="brand-text">Smart Cart</span>
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="mainNav">
-      <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
-        <li class="nav-item"><a class="nav-link active" href="openContact.html">Admin Panel </a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
-        <li id="nav-feedback" class="nav-item d-none"><a class="nav-link" href="feedback.html">Live Feed</a></li>
-        <li id="nav-auth" class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
-      </ul>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
+    <div class="container">
+      <a class="navbar-brand d-flex align-items-center" href="home.html">
+        <img src="logo_placeholder_loginpage copy.jpeg" class="navbarimg me-2" alt="Logo" />
+        <span class="brand-text">Smart Cart</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+        aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
+          <li class="nav-item"><a class="nav-link active" href="openContact.html">Admin Panel</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
+          <li id="nav-feedback" class="nav-item d-none"><a class="nav-link" href="feedback.html">Live Feed</a></li>
+          <li id="nav-auth" class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
-<!-- Contact Form -->
-<main class="container py-5">
-  <div class="contact-card p-4 mx-auto" style="max-width:700px;">
-    <h2 class="mb-3">Get in touch</h2>
-    <p class="text-muted mb-4">Questions, feedback, or partnership ideas? Send us a message.</p>
-    <form id="contactForm" novalidate>
-      <div class="row g-3">
-        <div class="col-sm-6">
-          <label for="firstName" class="form-label">First name</label>
-          <input type="text" id="firstName" class="form-control" placeholder="Jane" required>
-        </div>
-        <div class="col-sm-6">
-          <label for="lastName" class="form-label">Last name</label>
-          <input type="text" id="lastName" class="form-control" placeholder="Doe" required>
-        </div>
-      </div>
-      <div class="mt-3">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" id="email" class="form-control" placeholder="name@example.com" required>
-      </div>
-      <div class="mt-3">
-        <label for="topic" class="form-label">Topic</label>
-        <select id="topic" class="form-select" required>
-          <option value="" selected disabled>Select a topic…</option>
-          <option value="support">Support</option>
-          <option value="partnership">Partnership</option>
-          <option value="press">Press</option>
-          <option value="other">Other</option>
-        </select>
-      </div>
-      <div class="mt-3">
-        <label class="form-label">Preferred contact method</label>
-        <div class="d-flex flex-wrap gap-3">
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="contactMethod" id="contactEmail" value="email" checked>
-            <label class="form-check-label" for="contactEmail">Email</label>
+  <!-- Contact Form -->
+  <main class="container py-5">
+    <div class="contact-card p-4 mx-auto" style="max-width:700px;">
+      <h2 class="mb-3">Get in touch</h2>
+      <p class="text-muted mb-4">Questions, feedback, or partnership ideas? Send us a message.</p>
+
+      <form id="contactForm" novalidate>
+        <div class="row g-3">
+          <div class="col-sm-6">
+            <label for="firstName" class="form-label">First name</label>
+            <input type="text" id="firstName" class="form-control" placeholder="Jane" required />
           </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="contactMethod" id="contactPhone" value="phone">
-            <label class="form-check-label" for="contactPhone">Phone</label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="contactMethod" id="contactOther" value="other">
-            <label class="form-check-label" for="contactOther">Other</label>
+          <div class="col-sm-6">
+            <label for="lastName" class="form-label">Last name</label>
+            <input type="text" id="lastName" class="form-control" placeholder="Doe" required />
           </div>
         </div>
-      </div>
-      <div class="mt-3">
-        <label for="message" class="form-label">Message</label>
-        <textarea id="message" rows="5" class="form-control" placeholder="Write your message…" required></textarea>
-      </div>
-      <div class="form-check mt-3">
-        <input class="form-check-input" type="checkbox" id="updates">
-        <label class="form-check-label" for="updates">Send me product updates</label>
-      </div>
-      <small class="text-muted d-block mt-2">We’ll reply within 2 business days.</small>
-      <button type="submit" class="btn btn-primary w-100 mt-4" id="submitBtn">Send message</button>
-    </form>
-  </div>
-</main>
 
-<footer>© 2025 Smart Cart. All rights reserved.</footer>
+        <div class="mt-3">
+          <label for="email" class="form-label">Email</label>
+          <input type="email" id="email" class="form-control" placeholder="name@example.com" required />
+        </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+        <div class="mt-3">
+          <label for="topic" class="form-label">Topic</label>
+          <select id="topic" class="form-select" required>
+            <option value="" selected disabled>Select a topic…</option>
+            <option value="support">Support</option>
+            <option value="partnership">Partnership</option>
+            <option value="press">Press</option>
+            <option value="other">Other</option>
+          </select>
+        </div>
 
-<script type="module">
-  import { initializeApp, getApps } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-  import { getDatabase, ref, push } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-database.js";
-  import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+        <div class="mt-3">
+          <label class="form-label">Preferred contact method</label>
+          <div class="d-flex flex-wrap gap-3">
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="contactMethod" id="contactEmail" value="email" checked />
+              <label class="form-check-label" for="contactEmail">Email</label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="contactMethod" id="contactPhone" value="phone" />
+              <label class="form-check-label" for="contactPhone">Phone</label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="contactMethod" id="contactOther" value="other" />
+              <label class="form-check-label" for="contactOther">Other</label>
+            </div>
+          </div>
+        </div>
 
-  const firebaseConfig = {
-    apiKey:"AIzaSyAZpdtDkHAmCz9GosbJ-PkO4KM2iaNTfHQ",
-    authDomain:"freecart11.firebaseapp.com",
-    projectId:"freecart11",
-    databaseURL:"https://freecart11-default-rtdb.europe-west1.firebasedatabase.app",
-    appId:"1:369725415465:web:8beecb3baf985ddddb7c38"
-  };
+        <div class="mt-3">
+          <label for="message" class="form-label">Message</label>
+          <textarea id="message" rows="5" class="form-control" placeholder="Write your message…" required></textarea>
+        </div>
 
-  if(!getApps().length) initializeApp(firebaseConfig);
+        <div class="form-check mt-3">
+          <input class="form-check-input" type="checkbox" id="updates" />
+          <label class="form-check-label" for="updates">Send me product updates</label>
+        </div>
 
-  const db = getDatabase(undefined, firebaseConfig.databaseURL);
-  const auth = getAuth();
+        <small class="text-muted d-block mt-2">We’ll reply within 2 business days.</small>
 
-  // Navbar auth
-  const navFeedback = document.getElementById('nav-feedback');
-  const navAuth = document.getElementById('nav-auth');
-  onAuthStateChanged(auth, user=>{
-    if(user){
-      navFeedback?.classList.remove('d-none');
-      if(navAuth){
-        navAuth.innerHTML=`<a class="nav-link" href="#" id="nav-logout">Logout (${user.email||user.uid})</a>`;
-        document.getElementById('nav-logout')?.addEventListener('click', async e=>{
-          e.preventDefault();
-          await signOut(auth);
-          window.location.href='home.html';
-        });
-      }
-    } else { navFeedback?.classList.add('d-none'); if(navAuth) navAuth.innerHTML=`<a class="nav-link" href="login.html">Login</a>`;}
-  });
+        <button type="submit" class="btn btn-primary w-100 mt-4" id="submitBtn">Send message</button>
+      </form>
+    </div>
+  </main>
 
-  // Form submission
-  const form=document.getElementById('contactForm');
-  const submitBtn=document.getElementById('submitBtn');
+  <footer>© 2025 Smart Cart. All rights reserved.</footer>
 
-  form.addEventListener('submit', e=>{
-    e.preventDefault();
-    if(!form.checkValidity()){ form.classList.add('was-validated'); return; }
-
-    const data={
-      firstName:document.getElementById('firstName').value,
-      lastName:document.getElementById('lastName').value,
-      email:document.getElementById('email').value,
-      topic:document.getElementById('topic').value,
-      preferredContactMethod:document.querySelector('input[name="contactMethod"]:checked').value,
-      message:document.getElementById('message').value,
-      updates:document.getElementById('updates').checked,
-      status:'pending',
-      timestamp:Date.now()
-    };
-
-    push(ref(db,'contacts'),data)
-      .then(()=>{
-        submitBtn.disabled=true;
-        const original=submitBtn.textContent;
-        submitBtn.textContent="Sent!";
-        submitBtn.classList.add('btn-success','shadow-lg');
-        setTimeout(()=>{
-          submitBtn.textContent=original;
-          submitBtn.classList.remove('btn-success','shadow-lg');
-          submitBtn.disabled=false;
-        },2000);
-        form.reset();
-        form.classList.remove('was-validated');
-      })
-      .catch(err=>{
-        console.error(err);
-        alert('Error sending message. Please try again.');
-      });
-  });
-
-  // Animate card entrance
-  document.addEventListener('DOMContentLoaded', ()=>{
-    const card=document.querySelector('.contact-card');
-    if(card) card.classList.add('show');
-  });
-</script>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="module" src="contact.js"></script>
 </body>
 </html>
