--- a/feedback.html
+++ b/feedback.html
@@ -1,128 +1,23 @@
 <!doctype html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Feedback | Smart Cart</title>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="home.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
 
-  <style>
-    /* Page-local overrides to keep feedback page isolated from hero layout */
-    .hero,
-    .hero-video,
-    .hero-img,
-    video.hero-video {
-      display: none !important;
-    }
-
-    .container-main {
-      padding-top: 96px;
-      max-width: 1160px;
-      margin: 0 auto;
-    }
-
-    .container-main h1 {
-      text-align: center;
-      margin-bottom: 1.5rem;
-    }
-
-    /* Placeholder sizing: responsive width with dynamic minimums based on viewport */
-    .placeholder-box {
-      height: 36vh;
-      /* scale height with viewport */
-      min-height: 260px;
-      /* absolute minimum for small screens */
-      max-height: 560px;
-      /* avoid going too tall on large screens */
-      border-radius: 12px;
-      background: #0b61a7;
-      color: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 90%;
-      /* default relative width */
-      max-width: 920px;
-      /* maximum width */
-      min-width: 40vw;
-      /* dynamic minimum relative to viewport width */
-      margin: 0 auto;
-    }
-
-    .small-muted {
-      color: #6c757d;
-    }
-
-    /* Ensure columns stretch so cards match height */
-    .row.g-4>.col-12.d-flex {
-      display: flex;
-      align-items: stretch;
-    }
-
-    .custom-card {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .custom-card .d-flex,
-    .custom-card .placeholder-box {
-      flex: 1 1 auto;
-    }
-
-    /* Slight media-tuning */
-    @media (max-width: 575px) {
-
-      /* On small screens make both placeholders equal-width and equal-height */
-      .placeholder-box {
-        width: 100%;
-        min-width: auto;
-        height: 40vh;
-        min-height: 220px;
-        max-width: none;
-      }
-
-      /* Ensure the cards stretch and placeholders keep consistent sizing */
-      .row.g-4>.col-12.d-flex {
-        align-items: stretch;
-      }
-
-      .custom-card {
-        flex: 1 1 auto;
-      }
-    }
-
-    @media (min-width: 1200px) {
-      .placeholder-box {
-        min-width: 480px;
-      }
-    }
-
-    /* Make feedback cards match site theme and equal height */
-    .custom-card {
-      border-radius: 16px;
-      box-shadow: 0 14px 30px rgba(0, 0, 0, .06);
-    }
-
-    .row.g-4>.col-12.d-flex {
-      display: flex;
-    }
-
-    .custom-card .card-body,
-    .custom-card .card {
-      border: none;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="home.css" />
+  <link rel="stylesheet" href="feedback.css" />
 </head>
 
 <body>
-
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="home.html">
-        <img src="logo_placeholder_loginpage copy.jpeg" class="navbarimg me-2" alt="Logo">
+        <img src="logo_placeholder_loginpage copy.jpeg" class="navbarimg me-2" alt="Logo" />
         <span class="brand-text">Smart Cart</span>
       </a>
 
@@ -133,9 +28,12 @@
 
       <div class="collapse navbar-collapse" id="mainNav">
         <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
+          <li id="nav-admin" class="nav-item" style="display:none;">
+            <a class="nav-link" href="openContact.html">Admin Panel</a>
+          </li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-          <li id="nav-feedback" class="nav-item d-none"><a class="nav-link" href="feedback.html">Live Feed</a></li>
+          <li id="nav-feedback" class="nav-item d-none"><a class="nav-link active" href="feedback.html">Live Feed</a></li>
           <li id="nav-auth" class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
         </ul>
       </div>
@@ -145,41 +43,40 @@
   <main class="container-main">
     <h1 class="mb-4">Live Feedback</h1>
 
-    <div class="row g-4 justify-content-center justify-content-md-end">
-      <div class="col-12 col-md-6 d-flex">
+    <div class="row g-4 justify-content-center justify-content-md-end feedback-row d-flex">
+      <!-- CAMERA -->
+      <div class="col-12 col-md-6 px-0 px-md-2">
         <div class="card p-4 text-center h-100 custom-card">
           <h5>Camera Feed</h5>
+
           <div class="placeholder-box my-3">
-            <div style="text-align:center">
-              <div style="font-size:48px">📷</div>
-              <div class="placeholder-box my-3" style="padding:0;">
-                <!-- cameraFeed src will be set from Firebase /video_server/ip -->
-                <img id="cameraFeed"
-                     src=""
-                     style="width:100%; height:100%; object-fit:cover; border-radius:12px;">
-              </div>
-              <div id="cameraStatus" style="font-weight:600;margin-top:.5rem">No camera data</div>
-            </div>
+            <img
+              id="cameraFeed"
+              src=""
+              alt=""
+              style="width:100%; height:100%; object-fit:cover; border-radius:12px;"
+            />
           </div>
-          <div class="d-flex gap-2 justify-content-center">
+
+          <div class="d-flex gap-2 justify-content-center mt-3">
             <button class="btn btn-secondary btn-sm" disabled>Start Camera</button>
             <button class="btn btn-outline-secondary btn-sm" disabled>Stop Camera</button>
           </div>
         </div>
       </div>
 
-      <div class="col-12 col-md-6 d-flex">
+      <!-- SENSOR -->
+      <div class="col-12 col-md-6 px-0 px-md-2">
         <div class="card p-4 text-center h-100 custom-card">
           <h5>Proximity Sensor</h5>
+
           <div class="placeholder-box my-3">
-            <div style="text-align:center">
-              <div style="font-size:40px">📡</div>
-              <div id="proxPlaceholderText" class="fw-bold mt-2" style="color:#ffffff; opacity:0.95">
-                No sensor data
-                <h3>Distance: <span id="distanceValue">Loading...</span></h3>
-              </div>
+            <div id="proxPlaceholderText" class="fw-bold mt-2" style="color:#ffffff; opacity:0.95">
+              No sensor data
+              <h3>Distance: <span id="distanceValue">Loading...</span></h3>
             </div>
           </div>
+
           <div class="d-flex gap-2 justify-content-center mt-2">
             <button id="startSensor" class="btn btn-secondary btn-sm" disabled>Start Data</button>
             <button id="stopSensor" class="btn btn-outline-secondary btn-sm" disabled>Stop Data</button>
@@ -188,171 +85,12 @@
       </div>
     </div>
   </main>
+
+  <footer class="footer">
+    <p>© 2025 Smart Cart. All rights reserved.</p>
+  </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-
-  <script type="module">
-    import { initializeApp, getApps } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-    import {
-      getAuth,
-      onAuthStateChanged,
-      signOut
-    } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-    import {
-      getDatabase,
-      ref,
-      onValue
-    } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-database.js";
-
-    const fbAuthConfig = {
-      apiKey: "AIzaSyAZpdtDkHAmCz9GosbJ-PkO4KM2iaNTfHQ",
-      authDomain: "freecart11.firebaseapp.com",
-      projectId: "freecart11",
-      databaseURL: "https://freecart11-default-rtdb.europe-west1.firebasedatabase.app",
-      messagingSenderId: "369725415465",
-      appId: "1:369725415465:web:8beecb3baf985ddddb7c38"
-    };
-
-    // init Firebase once
-    if (!getApps().length) initializeApp(fbAuthConfig);
-
-    // --- Authentication setup ---
-    const fbAuth = getAuth();
-
-    const navFeedback = document.getElementById('nav-feedback');
-    const navAuth = document.getElementById('nav-auth');
-
-    onAuthStateChanged(fbAuth, (user) => {
-      if (user) {
-        navFeedback?.classList.remove('d-none');
-        if (navAuth) {
-          navAuth.innerHTML = `<a class="nav-link" href="#" id="nav-logout">Logout (${user.email || user.uid})</a>`;
-          document.getElementById('nav-logout')?.addEventListener('click', async (e) => {
-            e.preventDefault();
-            await signOut(fbAuth);
-            window.location.href = 'home.html';
-          });
-        }
-      } else {
-        navFeedback?.classList.add('d-none');
-        if (navAuth) navAuth.innerHTML = `<a class="nav-link" href="login.html">Login</a>`;
-      }
-    });
-
-    // Defensive DOM cleanup
-    document.addEventListener('DOMContentLoaded', () => {
-      document.querySelectorAll('.hero, .hero-video, .hero-img').forEach(el => el.remove());
-    });
-
-    // --- Realtime DB ---
-    const db = getDatabase();
-
-    // --- Camera feed from Python video server ---
-    const cameraImg = document.getElementById("cameraFeed");
-    const cameraStatus = document.getElementById("cameraStatus");
-
-    // Python writes its IP as plain string to /video_server/ip
-    const videoServerIpRef = ref(db, "video_server/ip");
-
-    onValue(videoServerIpRef, (snapshot) => {
-      const pcIp = snapshot.val();
-      console.log("Video server IP from Firebase:", pcIp);
-
-      if (!pcIp) {
-        if (cameraStatus) {
-          cameraStatus.textContent = "No camera server IP";
-        }
-        cameraImg.removeAttribute("src");
-        return;
-      }
-
-      const url = `http://${pcIp}:5000/video`;
-      cameraImg.src = url;
-      if (cameraStatus) {
-        cameraStatus.textContent = `Streaming from ${url}`;
-      }
-    }, (error) => {
-      console.error("Error reading video server IP:", error);
-      if (cameraStatus) {
-        cameraStatus.textContent = "Error loading camera";
-      }
-    });
-
-    // --- Real-time proximity sensor logic ---
-    const distanceEl = document.getElementById("distanceValue");
-    const distanceRef = ref(db, "sensor/distance");
-
-    onValue(distanceRef, (snapshot) => {
-      const dist = snapshot.val();
-
-      // Update numeric display
-      if (dist === null || dist === undefined) {
-        distanceEl.textContent = "No sensor data";
-        distanceEl.style.color = "#ffffff";
-      } else {
-        distanceEl.textContent = dist + " cm";
-        if (typeof dist === 'number') {
-          if (dist < 20) distanceEl.style.color = "#ff4d4d";
-          else if (dist < 50) distanceEl.style.color = "#ffcc00";
-          else distanceEl.style.color = "#00ff99";
-        } else {
-          distanceEl.style.color = "#ffffff";
-        }
-      }
-
-      // Update proximity placeholder visuals (text + background)
-      const proxText = document.getElementById('proxPlaceholderText');
-      if (proxText) {
-        const box = proxText.closest('.placeholder-box');
-        if (dist === null || dist === undefined) {
-          proxText.innerHTML = '<div style="font-weight:600">No sensor data</div>';
-          if (box) box.style.background = '#0b61a7';
-        } else {
-          proxText.innerHTML = `
-              <div style="font-size:20px; font-weight:700;">Distance: ${dist} cm</div>
-              <div style="font-size:14px; opacity:0.9; margin-top:.25rem;">
-                ${dist < 20 ? 'Too close' : (dist < 50 ? 'Near' : 'Clear')}
-              </div>`;
-          if (box) {
-            if (typeof dist === 'number') {
-              if (dist < 20) box.style.background = '#ff4d4d';
-              else if (dist < 50) box.style.background = '#ffcc00';
-              else box.style.background = '#0b61a7';
-            } else {
-              box.style.background = '#0b61a7';
-            }
-          }
-        }
-      }
-    });
-
-    // --- Simulator hooks (leave as-is if you use them elsewhere) ---
-    let simInterval = null;
-    const startBtn = document.getElementById('startSensor');
-    const stopBtn = document.getElementById('stopSensor');
-
-    // Enable the controls on page load (if you implement fakeSensorOnce)
-    if (startBtn && stopBtn) {
-      startBtn.disabled = false;
-      stopBtn.disabled = true;
-
-      startBtn.addEventListener('click', () => {
-        if (simInterval) return;
-        // fakeSensorOnce(); // only if you have this defined elsewhere
-        // simInterval = setInterval(fakeSensorOnce, 1500);
-        startBtn.disabled = true;
-        stopBtn.disabled = false;
-      });
-
-      stopBtn.addEventListener('click', () => {
-        if (!simInterval) return;
-        clearInterval(simInterval);
-        simInterval = null;
-        startBtn.disabled = false;
-        stopBtn.disabled = true;
-      });
-    }
-  </script>
-
+  <script type="module" src="feedback.js"></script>
 </body>
-
 </html>
