--- a/login.html
+++ b/login.html
@@ -1,19 +1,20 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Login | Smart Cart System</title>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="login.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="login.css" />
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="home.html">
-        <img src="logo_placeholder_loginpage copy.jpeg" class="navbarimg me-2" alt="Logo">
+        <img src="logo_placeholder_loginpage copy.jpeg" class="navbarimg me-2" alt="Logo" />
         <span class="brand-text">Smart Cart</span>
       </a>
 
@@ -24,7 +25,7 @@
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
-          <li class="nav-item"><a class="nav-link active" href="openContact.html">Admin Panel </a></li>
+          <li class="nav-item"><a class="nav-link active" href="openContact.html">Admin Panel</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
           <li id="nav-feedback" class="nav-item d-none"><a class="nav-link" href="feedback.html">Live Feed</a></li>
@@ -36,25 +37,24 @@
 
   <main class="d-flex justify-content-center align-items-center min-vh-100">
     <div class="card shadow-lg login-card text-center p-4">
-      <img src="logo_placeholder_loginpage copy.jpeg" alt="Logo" class="login-logo mb-3">
+      <img src="logo_placeholder_loginpage copy.jpeg" alt="Logo" class="login-logo mb-3" />
       <h3 class="mb-3">Welcome Back</h3>
       <p class="text-muted mb-4">Please log in to continue</p>
 
-      <!-- טופס התחברות -->
       <form id="loginForm">
         <div class="mb-3 text-start">
           <label for="email" class="form-label">Email address</label>
-          <input type="email" id="email" class="form-control" placeholder="Enter your email" required>
+          <input type="email" id="email" class="form-control" placeholder="Enter your email" required />
         </div>
 
         <div class="mb-3 text-start">
           <label for="password" class="form-label">Password</label>
-          <input type="password" id="password" class="form-control" placeholder="Enter your password" required>
+          <input type="password" id="password" class="form-control" placeholder="Enter your password" required />
         </div>
 
         <div class="d-flex justify-content-between align-items-center mb-3">
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="remember">
+            <input class="form-check-input" type="checkbox" id="remember" />
             <label class="form-check-label" for="remember">Remember me</label>
           </div>
         </div>
@@ -66,7 +66,6 @@
         </p>
       </form>
 
-      <!-- מוצג כשכבר מחוברים -->
       <div id="loggedInBox" class="alert alert-light border d-none mt-3">
         You are already logged in.
         <button id="logoutBtn" class="btn btn-outline-secondary btn-sm ms-2">Log out</button>
@@ -74,100 +73,7 @@
     </div>
   </main>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-    import {
-      getAuth,
-      setPersistence,
-      browserLocalPersistence,
-      browserSessionPersistence,
-      signInWithEmailAndPassword,
-      onAuthStateChanged,
-      signOut
-    } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyAZpdtDkHAmCz9GosbJ-PkO4KM2iaNTfHQ",
-      authDomain: "freecart11.firebaseapp.com",
-      projectId: "freecart11",
-      messagingSenderId: "369725415465",
-      appId: "1:369725415465:web:8beecb3baf985ddddb7c38"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-
-    const form = document.getElementById("loginForm");
-    const loggedInBox = document.getElementById("loggedInBox");
-    const logoutBtn = document.getElementById("logoutBtn");
-
-    onAuthStateChanged(auth, (user) => {
-      if (user) {
-        loggedInBox.classList.remove("d-none");
-        form.classList.add("d-none");
-      } else {
-        loggedInBox.classList.add("d-none");
-        form.classList.remove("d-none");
-      }
-    });
-
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const email = document.getElementById("email").value.trim();
-      const password = document.getElementById("password").value;
-      const remember = document.getElementById("remember").checked;
-
-      try {
-        await setPersistence(auth, remember ? browserLocalPersistence : browserSessionPersistence);
-        await signInWithEmailAndPassword(auth, email, password);
-        window.location.href = "home.html";
-      } catch (err) {
-        alert(err.message);
-      }
-    });
-
-    logoutBtn?.addEventListener("click", async () => {
-      await signOut(auth);
-    });
-  </script>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-  
-  <script type="module">
-    import { initializeApp, getApps } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-
-    const fbAuthConfig = {
-      apiKey: "AIzaSyAZpdtDkHAmCz9GosbJ-PkO4KM2iaNTfHQ",
-      authDomain: "freecart11.firebaseapp.com",
-      projectId: "freecart11",
-      messagingSenderId: "369725415465",
-      appId: "1:369725415465:web:8beecb3baf985ddddb7c38"
-    };
-
-    if (!getApps().length) initializeApp(fbAuthConfig);
-    const fbAuth = getAuth();
-
-    const navFeedback = document.getElementById('nav-feedback');
-    const navAuth = document.getElementById('nav-auth');
-
-    onAuthStateChanged(fbAuth, (user) => {
-      if (user) {
-        navFeedback?.classList.remove('d-none');
-        if (navAuth) {
-          navAuth.innerHTML = `<a class="nav-link" href="#" id="nav-logout">Logout (${user.email || user.uid})</a>`;
-          document.getElementById('nav-logout')?.addEventListener('click', async (e) => {
-            e.preventDefault();
-            await signOut(fbAuth);
-            window.location.href = 'home.html';
-          });
-        }
-      } else {
-        navFeedback?.classList.add('d-none');
-        if (navAuth) navAuth.innerHTML = `<a class="nav-link active" href="login.html">Login</a>`;
-      }
-    });
-  </script>
+  <script type="module" src="login.js"></script>
 </body>
 </html>
-
