live control update

--- a/feedback.html
+++ b/feedback.html
@@ -42,6 +42,10 @@
 
   <main class="container-main">
     <h1 class="mb-4">Live Feedback</h1>
+    <div class="mb-3">
+      <a id="controlBtn" href="feedback_control.html" class="btn btn-sm btn-primary d-none">Control (joystick)</a>
+      <small class="text-muted ms-2">Opens control panel that sends commands to Firebase</small>
+    </div>
 
     <div class="row g-4 justify-content-center justify-content-md-end feedback-row d-flex">
       <!-- CAMERA -->
