--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="home.html">
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
         <img src="logo_placeholder_loginpage copy.jpeg" class="navbarimg me-2" alt="Logo" />
         <span class="brand-text">Smart Cart</span>
       </a>
